registry/registry-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: registry
  name: registry
  namespace: container-registry
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 5000
  selector:
    app: registry
