registry/registry-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: registry-ingress
  namespace: container-registry
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 1500m
spec:
  tls:
  - hosts:
    - registry.atat.code.mil
    secretName: registry-ingress-tls
  rules:
  - host: registry.atat.code.mil
    http:
      paths:
      - path: /
        backend:
          serviceName: registry
          servicePort: 80
